[tool.poetry]
name = "yank-code"
version = "0.1.1"
description = "Yank code blocks from LLM generated markdown"
authors = ["Rahul Krishna <i.m.ralk@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tree-sitter-markdown = {git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", rev = "v0.2.3"}
pytest = "^8.2.2"
tree-sitter = "^0.22.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
